--- a/AdaptiveRAG.ipynb
+++ b/AdaptiveRAG.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 121,
    "id": "cde80aa0",
    "metadata": {},
    "outputs": [],
@@ -120,29 +120,8 @@
     "question_router = route_prompt|structured_llm_router\n",
     "\n",
     "response = question_router.invoke(\n",
-    "    {\"question\": \"What are the types of agent memory?\"}\n",
+    "    {\"question\": \"How are you?\"}\n",
     ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "id": "2bf18d9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'web_search'"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.additional_kwargs['tool_calls'][0]['function']['name']"
    ]
   },
   {
@@ -499,7 +478,52 @@
     "    return{\"documents\":web_result,\"question\":question}\n",
     "\n",
     "\n",
+    "def route_question(state):\n",
+    "    print(\"---ROUTE QUESTION---\")\n",
     "\n",
+    "    question = state[\"question\"]\n",
+    "    source = question_router({\"question\":question})\n",
+    "\n",
+    "    if \"tool_calls\" not in source.additional_kwargs:\n",
+    "        print(\"---ROUTE QUESTION TO LLM---\")\n",
+    "        return llm_fallback\n",
+    "    if len(source.additional_kwargs[\"tool_calls\"]) == 0:\n",
+    "        raise \"Router could not decide source\"\n",
+    "\n",
+    "    datasource = source.additional_kwargs['tool_calls'][0]['function']['name'] \n",
+    "    if datasource == \"vectorspace\":\n",
+    "        print(\"---ROUTE QUESTION TO RAG---\")\n",
+    "        return \"vectorstore\"\n",
+    "    elif datasource == \"web_search\":\n",
+    "        print(\"---ROUTE QUESTION TO WEB SEARCH---\")\n",
+    "        return \"web_search\"\n",
+    "    else:\n",
+    "        print(\"---ROUTE QUESTION TO LLM---\")\n",
+    "        return \"llm_fallback\"\n",
+    "    \n",
+    "\n",
+    "    \n",
+    "def decide_to_generate(state):\n",
+    "    print(\"---ASSESS GRADED DOCUMENTS---\")\n",
+    "\n",
+    "    state[\"question\"]\n",
+    "    filtered_documents = state[\"documents\"]\n",
+    "\n",
+    "    if not filtered_documents:\n",
+    "        print(\"---DECISION: ALL DOCUMENTS ARE NOT RELEVANT TO QUESTION, WEB SEARCH---\")\n",
+    "        return \"web_search\"\n",
+    "    else:\n",
+    "        print(\"---DECISION: GENERATE---\")\n",
+    "    return \"generate\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -508,58 +532,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3f518f96",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "docs = web_search_tool.invoke(dcontent{\"query\":question})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "id": "bd86faa3",
+   "execution_count": 122,
+   "id": "fcd0418f",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'title': 'What Is AI Agent Memory? Types, Tradeoffs and Implementation',\n",
-       "  'url': 'https://www.techtarget.com/searchenterpriseai/tip/What-is-AI-agent-memory-Types-tradeoffs-and-implementation',\n",
-       "  'content': '## Types of AI agent memory\\n\\nAI agents can use two broad types of memory: short-term memory and long-term memory. Each type of memory can be designed in different common variations.\\n\\n### Short-term memory [...] Memory type: STM vs. LTM. STM is used to maintain context and continuity during a single session or task. LTM retains information across sessions and tasks, so an AI agent can learn, adapt and glean insights. LTM types include episodic, semantic and procedural, each providing unique benefits to an AI agent. STM uses relatively little memory capacity and can offer fast performance, while LTM can use extensive memory capacity, which introduces latency and inefficiency to the storage and [...] LTM is often implemented with well-established technologies, like databases and knowledge graphs, and can include vector embeddings. LTM also relies heavily on RAG techniques that enable the AI agent to locate required information from a stored knowledge resource to generate improved responses.\\n\\nThere are typically three types of long-term AI agent memory, including the following:',\n",
-       "  'score': 0.89567816},\n",
-       " {'title': 'Memory Types in Agentic AI: A Breakdown | by Gokcer Belgusen',\n",
-       "  'url': 'https://medium.com/@gokcerbelgusen/memory-types-in-agentic-ai-a-breakdown-523c980921ec',\n",
-       "  'content': '# How These Work Together in Agentic AI\\n\\nIn an agentic AI system, these memory types collaborate to create a capable, goal-driven agent. Short-term memory handles immediate demands, while long-term memory — encompassing semantic, episodic, and procedural elements — builds a deeper foundation.\\n\\nSemantic memory provides the facts, episodic memory offers lessons from experience, and procedural memory ensures smooth execution. [...] Sitemap\\n\\nOpen in app\\n\\nSign in\\n\\nSign in\\n\\n# Memory Types in Agentic AI: A Breakdown\\n\\nGokcer Belgusen\\n\\n4 min readApr 6, 2025\\n\\nAgentic AI — systems designed to act autonomously, make decisions, and pursue goals — relies on various types of memory to function effectively. Drawing from cognitive science concepts, these memory types include\\n\\n semantic\\n episodic\\n short-term\\n procedural and\\n long-term memory. [...] Episodic memory is the AI’s record of specific experiences or events, tied to a time and context. Think of it as the agent’s personal history — like recalling, “Last Tuesday, I helped a user debug code and got stuck on a syntax error.” In agentic AI, episodic memory allows the system to reflect on past interactions or actions, learning from successes or mistakes. This type of memory adds a narrative layer, helping the AI adjust its behavior based on what it has directly encountered.',\n",
-       "  'score': 0.85186684},\n",
-       " {'title': 'What are AI agents? Definition, examples, and types | Google Cloud',\n",
-       "  'url': 'https://cloud.google.com/discover/what-are-ai-agents',\n",
-       "  'content': 'Memory: The agent is equipped in general with short term, long term, consensus, and episodic memory.Short term memory for immediate interactions, long-term memory for historical data and conversations, episodic memory for past interactions, and consensus memory for shared information among agents. The agent can maintain context, learn from experiences, and improve performance by recalling past interactions and adapting to new situations.',\n",
-       "  'score': 0.8342047},\n",
-       " {'title': 'Memory in multi-agent systems: technical implementations - Medium',\n",
-       "  'url': 'https://medium.com/@cauri/memory-in-multi-agent-systems-technical-implementations-770494c0eca7',\n",
-       "  'content': '1. Immediate Working Memory — Information that must remain constantly accessible, similar to how you don’t need to recall how to speak or walk consciously\\n2. Searchable Episodic Memory — Information the agent must actively retrieve, comparable to how you search your mind for a specific conversation or event\\n3. Procedural Memory — Skills and learned behaviours that become automatic, like your ability to type without thinking about individual keys [...] Modern agent systems require more nuanced memory types that mirror human cognitive categories:',\n",
-       "  'score': 0.7732339},\n",
-       " {'title': 'What Is AI Agent Memory? | IBM',\n",
-       "  'url': 'https://www.ibm.com/think/topics/ai-agent-memory',\n",
-       "  'content': \"Researchers categorize agentic memory in much the same way that psychologists categorize human memory. The influential Cognitive Architectures for Language Agents (CoALA) paper1 from a team at Princeton University describes different types of memory as:\\n\\n### Short-term memory [...] Episodic memory allows AI agents to recall specific past experiences, similar to how humans remember individual events. This type of memory is useful for case-based reasoning, where an AI learns from past events to make better decisions in the future.Episodic memory is often implemented by logging key events, actions and their outcomes in a structured format that the agent can access when making decisions.For example, an AI-powered financial advisor might remember a user's past investment\",\n",
-       "  'score': 0.7732339}]"
-      ]
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'tool_calls'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[122]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43madditional_kwargs\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtool_calls\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[32m0\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mfunction\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mKeyError\u001b[39m: 'tool_calls'"
+     ]
     }
    ],
    "source": [
-    "docs"
+    "response.additional_kwargs['tool_calls'][0]['function']['name']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fcd0418f",
+   "id": "b5d30045",
    "metadata": {},
    "outputs": [],
    "source": []
