--- a/AdaptiveRAG.ipynb
+++ b/AdaptiveRAG.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "fe5237a1",
    "metadata": {},
    "outputs": [],
@@ -517,45 +517,45 @@
     "    return \"generate\"\n",
     "\n",
     "\n",
+    "def grade_generate_v_documents_and_question(state):\n",
     "\n",
-    "        \n",
+    "    print(\"---CHECK HALLUCINATIONS---\")\n",
+    "    question = state['question']\n",
+    "    documents = state['documents']\n",
+    "    generation = state['generation']\n",
     "\n",
+    "    score = hellucination_rag.invoke({'documents':docs,\"generation\":generation})\n",
     "\n",
+    "    grade = score.binary_score\n",
     "\n",
-    "\n",
+    "    if grade == \"yes\":\n",
+    "        print(\"---DECISION: GENERATION IS GROUNDED IN DOCUMENTS---\")\n",
+    "        score = answer_grader_rag.invoke({'question':question,\"generation\":generation})\n",
+    "        grade = score.binary_score\n",
+    "        print(\"---GRADE GENERATION vs QUESTION---\")\n",
+    "        if grade == 'yes':\n",
+    "            print(\"---DECISION: GENERATION ADDRESSES QUESTION---\")\n",
+    "            return \"useful\"\n",
+    "        else: \n",
+    "            print(\"---DECISION: GENERATION DOES NOT ADDRESS QUESTION---\")\n",
+    "            return \"not useful\"\n",
+    "    else:\n",
+    "        print(\"---DECISION: GENERATION IS NOT GROUNDED IN DOCUMENTS, RE-TRY---\")\n",
+    "        return \"not supported\"\n",
     "    \n",
-    "\n",
-    "\n",
-    "\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 122,
-   "id": "fcd0418f",
+   "cell_type": "markdown",
+   "id": "194ccd4e",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'tool_calls'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[122]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mresponse\u001b[49m\u001b[43m.\u001b[49m\u001b[43madditional_kwargs\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtool_calls\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[32m0\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mfunction\u001b[39m\u001b[33m'\u001b[39m][\u001b[33m'\u001b[39m\u001b[33mname\u001b[39m\u001b[33m'\u001b[39m]\n",
-      "\u001b[31mKeyError\u001b[39m: 'tool_calls'"
-     ]
-    }
-   ],
-   "source": [
-    "response.additional_kwargs['tool_calls'][0]['function']['name']"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d30045",
+   "id": "e19ffee0",
    "metadata": {},
    "outputs": [],
    "source": []
